# whecho

./: .gitignore  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml  tox.ini  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  pytest.yml
docs/: api.md  index.md
tests/: test_auto_machine.py  test_help.py  test_post_message.py  test_version.py  test_whecho_simple.py
whecho/: README.md  _config.py  _send_message.py  _utilities.py  config.py  send_message.py  setup.py  utilities.py  whecho.py
