[tool.poetry]
name = "whecho"
version = "0.0.1"
description = "Linux echo with webhooks! ⚓"
readme = "README.md"
authors = [
  "Chinmay Raut",
  "Wendy Yu"
]
classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux"
]

[tool.poetry.dependencies]
python = ">=3.6"
requests = ">=2.25.1"
setuptools = ">=40.6.3"
toml = ">=0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
whecho = "whecho:whecho.main"

[project.urls]
"Homepage" = "https://github.com/cvraut/whecho"
"Bug Tracker" = "https://github.com/cvraut/whecho/issues"